fix for db transaction issues
