# docs/swagger.json
@@ -683,15 +683,21 @@
                 "repository"
             ],
             "properties": {
+                "force": {
+                    "type": "boolean"
+                },
                 "owner": {
                     "type": "string",
-                    "maxLength": 100,
+                    "maxLength": 50,
                     "minLength": 1
                 },
                 "repository": {
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 1
+                },
+                "sync_since": {
+                    "type": "string"
                 }
             }
         },
